# Actual-Budget-Normalizer

./: .dockerignore  .gitignore  Dockerfile  README_DOCKER.md  docker-compose.yml  main.py  payees.json  pyproject.toml  ruff.toml
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  prompts.py  registry.py  transaction_agent.py
app/api/: __init__.py  dependencies.py  routes.py
app/core/: __init__.py  db.py  models.py  settings.py  utils.py
app/services/: __init__.py  file_service.py  s3_file_service.py
app/workers/: __init__.py  job_runner.py
bkp/: main.py
tests/: test_api.py  test_job_lifecycle.py
