[project]
name = "actual-budget-normalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "groq>=0.24.0",
    "pandas>=2.2.3",
    "pydantic-ai>=0.1.11",
    "pydantic-settings>=2.9.1",
    "python-dateutil>=2.9.0.post0",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.2",
]
